syntax = "proto3";
option go_package = "./spec";

service Control {
  rpc Command2Internal(RequestSync) returns (ResponseSync){}
}

message RequestSync {
  Stations station = 1;
  enum State {
    UNKNOWN = 0;
    ON = 1;
    OFF = 2;
  }
  State state = 2;
}

message ResponseSync {
  enum Response {
    UNKNOWN = 0;
    SUCCESS = 1;
    FAILED = 2;
  }
  Response response = 1;
}

message Stations {
  enum StationId {
    unknown = 0;

    motoyawata_s1 = 1;
    motoyawata_s2 = 2;
    motoyawata_s3 = 3;
    motoyawata_s4 = 4;
    motoyawata_s5 = 5;
    motoyawata_s6 = 6;

    iwamotocho_s1 = 11;
    iwamotocho_s2 = 12;
    iwamotocho_s4 = 13;
    iwamotocho_b1 = 14;
    iwamotocho_b2 = 15;
    iwamotocho_b3 = 16;
    iwamotocho_b4 = 17;

    kudanshita_s5 = 21;
    kudanshita_s6 = 22;

    sasazuka_b1 = 31;
    sasazuka_s1 = 32;
    sasazuka_s2 = 33;
    sasazuka_s4 = 34;

    meidaimae_s1 = 41;
    meidaimae_s2 = 42;

    chofu_s1 = 51;
    chofu_s2 = 52;
    chofu_s3 = 53;
    chofu_s4 = 54;
    chofu_s5 = 55;
    chofu_b1 = 56;
    chofu_b2 = 57;
    chofu_b3 = 58;
    chofu_b4 = 59;
    chofu_b5 = 60;
    chofu_b6 = 61;

    kitano_b1 = 71;
    kitano_b2 = 72;
    kitano_b3 = 73;
    kitano_b4 = 74;
    kitano_s1 = 75;
    kitano_s2 = 76;
    kitano_s3 = 77;
    kitano_s4 = 78;
    kitano_s5 = 79;
    kitano_s6 = 80;

    takao_s1 = 91;
    takao_s2 = 92;
  }
  StationId stationId = 1;
}